[project]
name = "agent-loop-examples"
version = "0.1.0"
requires-python = ">=3.11"
description = "Three implementations of the same agent task across three frameworks"
readme = "README.md"
license = "MIT"

[dependency-groups]
pydantic-ai = ["pydantic-ai"]
openai-agents = ["openai-agents"]
langgraph = ["langgraph", "langchain-anthropic", "langchain-core"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["shared_tools"]
